fixing vertical-align of tables th

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -65,3 +65,7 @@ table .headerSortUp:after {
 th[scope="row"] {
   text-align: left;
 }
+
+.table thead th {
+  vertical-align: middle;
+}
